# aiogram3_template

./: .env.dist  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  robot.py
alembic/versions/: 2024_06_08_2036-95cc3e2c650c_create_user.py
migrations/: env.py
migrations/versions/: fd26bf483f81_initial.py
src/: __init__.py  main.py
src/config/: settings.py
src/database/: __init__.py  db_helper.py  helper.py  repository.py
src/database/migrations/: env.py
src/database/models/: user.py
src/filters/: is_private.py
src/handlers/: __init__.py  start.py
src/middlewares/: __init__.py  data_middleware.py  db_session.py
src/models/: user.py
src/services/: repository.py
src/settings/: config.py  db_setup.py
tgbot/: config.py
tgbot/handlers/: echo.py
tgbot/handlers/user/: user_handlers.py
tgbot/middlewares/: config.py  database.py
tgbot/models/: __init__.py  all_models.py  db_requests.py
tgbot/settings/database/: __init__.py  setup.py
